containers/citizen-registry/kubernetes/registry-gaia/k8s/main/deployment.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
   name: gaia
   namespace: demos-main
   labels:
      app: nginx
spec:
   serviceName: "gaia"
   replicas: 1
   selector:
      matchLabels:
         app: gaia
   template:
      metadata:
         labels:
            app: gaia
      spec:
         containers:
         -  name: gaia-sa-container
            image: io2060/2060-service-agent:main
            imagePullPolicy: Always
            volumeMounts:
            - name: gaia-sa-pv-main
              mountPath: /root/.afj
            ports:
            -  containerPort: 3000
            -  containerPort: 3001
         -  name: gaia-backend-container
            image: io2060/2060-demos-citizen-registry:main
            imagePullPolicy: Always
            ports:
            -  containerPort: 2903
         -  name: gaia-data-store-container
            image: io2060/2060-datastore:main
            imagePullPolicy: Always
            ports:
            -  containerPort: 2904
            volumeMounts:
            - name: gaia-data-store-main
              mountPath: /home/data
         -  name: postgres
            image: postgres:15.2
            imagePullPolicy: Always
            ports:
            -  containerPort: 5432
            volumeMounts:
            - name: gaia-pg-pv-main
              mountPath: /var/lib/postgresql/data
         -  name: gaia-gaia
            image: io2060/2060-demos-gaia-front:main
            imagePullPolicy: Always
            ports:
            -  containerPort: 80
   volumeClaimTemplates: 
   - metadata:
       name: gaia-artemis-pv-main
     spec:
       accessModes:
       - "ReadWriteOnce"
       resources:
         requests:
           storage: 1Gi
   - metadata:
       name: gaia-sa-pv-main
     spec:
       accessModes:
       - "ReadWriteOnce"
       resources:
         requests:
           storage: 1Gi
   - metadata:
       name: gaia-pg-pv-main
     spec:
       accessModes:
       - "ReadWriteOnce"
       resources:
         requests:
           storage: 1Gi
   - metadata:
       name: gaia-data-store-main
     spec:
       accessModes:
       - "ReadWriteOnce"
       resources:
         requests:
           storage: 1Gi
