containers/citizen-registry/kubernetes/registry-gaia/k8s/main/ingress-ds.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gaia-ds
  namespace: demos-main
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/whitelist-source-range: "51.79.89.27/32"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - q.gaia.demos.m.2060.io
        - d.gaia.demos.m.2060.io
      secretName: ds-gaia.demos.m.2060.io-cert
  rules:
    - host: q.gaia.demos.m.2060.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                 name: gaia
                 port:
                   number: 2903
    - host: d.gaia.demos.m.2060.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                 name: gaia
                 port:
                   number: 2904
